 + Added new API class SkillAPI used to get a list of valid skill names
 + Added magical mod config file import command, for Cauldron 1.7+. Check wiki for usage
 + Added particle effects and sounds to "Call of the Wild" (Taming)
 + Added summon length to "Call of the Wild". Summons will now commit suicide after their lifespan expires
 = Fixed bug where pistons would mess with the block tracking
 = Fixed bug where the Updater was running on the main thread.
 = Fixed bug when players would use /ptp without being in a party
 = Fixed bug where player didn't have a mcMMOPlayer object in AsyncPlayerChatEvent
 = Fixed bug where dodge would check the wrong player skill level
 = Fixed bug which causes /party teleport to stop working
 = Fixed bug where SaveTimerTask would produce an IndexOutOfBoundsException
 = Fixed bug where Alchemy would not fire BrewEvents
 = Fixed bug with setting custom names and lore in treasures config
 = Fixed bug which would cause a NullPointerException with getFlowerAndGrassXp()
 = Fixed bug which could cause and SQLException regarding the connection property 'maxReconnects'.
 = Fixed bug where falling blocks were incorrectly tracked
 = Fixed bug where items would get deleted when in Berserk with a full inventory
 = Fixed bug where the console would not correctly show party chat colors
 = Fixed bug where party chat was using non thread safe methods
 = Fixed bug where Blast Mining unlock levels could be to high in certain occasions
 = Fixed bug where Blast Minings ability "Demolition Expert" would not work
 = Fixed bug where Repair_Material_Quantity wasn't read in mod config files
 ! Changed SecondaryAbilityEvent to implement Cancellable and it now gets fired for damage related secondary abilities
 ! Changed the way mcMMO handles bonus damage, updated for the new damage event API
 ! Changed player data saving. Save tasks are now asynchronous
 ! Vanished players no longer get hit by AoE effects